; ModuleID = '/home/carl/AnghaBench/zstd/lib/deprecated/extr_zbuff_compress.c_ZBUFF_compressEnd.c'
source_filename = "/home/carl/AnghaBench/zstd/lib/deprecated/extr_zbuff_compress.c_ZBUFF_compressEnd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ZBUFF_compressEnd(i32* %0, i8* %1, i64* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.TYPE_3__, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64* %2, i64** %6, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 2
  store i8* %9, i8** %10, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  store i64 0, i64* %11, align 8
  %12 = load i64*, i64** %6, align 8
  %13 = load i64, i64* %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  store i64 %13, i64* %14, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = call i64 @ZSTD_endStream(i32* %15, %struct.TYPE_3__* %8)
  store i64 %16, i64* %7, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64*, i64** %6, align 8
  store i64 %18, i64* %19, align 8
  %20 = load i64, i64* %7, align 8
  ret i64 %20
}

declare dso_local i64 @ZSTD_endStream(i32*, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
